--- a/_modules/pysp2/util/peak_fit.html
+++ b/_modules/pysp2/util/peak_fit.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pysp2.util.peak_fit &#8212; PySP2 1.3.1 documentation</title>
+    <title>pysp2.util.peak_fit &#8212; PySP2 1.3.2 documentation</title>
     
   <!-- Loaded before other Sphinx assets -->
   <link href="../../../_static/styles/theme.css?digest=1999514e3f237ded88cf" rel="stylesheet">
@@ -573,7 +573,7 @@
 
         <span class="k">try</span><span class="p">:</span>
             <span class="n">start</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">((</span><span class="n">data</span> <span class="o">-</span> <span class="n">base</span><span class="p">)</span> <span class="o">&lt;</span> <span class="mi">50</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span>
-            <span class="k">if</span> <span class="n">start</span> <span class="o">==</span> <span class="p">[]:</span>
+            <span class="k">if</span> <span class="ow">not</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span><span class="n">start</span><span class="p">):</span>
                 <span class="n">start</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">nan</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">start</span> <span class="o">=</span> <span class="n">start</span><span class="p">[</span><span class="n">start</span> <span class="o">&lt;=</span> <span class="n">pos</span><span class="p">][</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
