--- a/_modules/pysp2/io/write_dat.html
+++ b/_modules/pysp2/io/write_dat.html
@@ -395,7 +395,8 @@ document.write(`
                    <span class="s2">&quot;Base_ch7&quot;</span><span class="p">,</span> <span class="s2">&quot;PkHt_ch7&quot;</span><span class="p">,</span> <span class="s2">&quot;PkPos_ch7&quot;</span><span class="p">,</span> <span class="s2">&quot;PkSplitPos_ch7&quot;</span><span class="p">,</span>
                    <span class="s2">&quot;IncanRatioch5ch6&quot;</span><span class="p">,</span> <span class="s2">&quot;IncanPkOffsetch5ch6&quot;</span><span class="p">,</span>
                    <span class="s2">&quot;IncanRatioch1ch2&quot;</span><span class="p">,</span> <span class="s2">&quot;IncanPkOffsetch1ch2&quot;</span><span class="p">,</span>
-                   <span class="s2">&quot;ScatRejectKey&quot;</span><span class="p">,</span> <span class="s2">&quot;IncanRejectKey&quot;</span><span class="p">]</span>
+                   <span class="s2">&quot;ScatRejectKey&quot;</span><span class="p">,</span> <span class="s2">&quot;IncanRejectKey&quot;</span><span class="p">,</span> <span class="s2">&quot;OneofEvery&quot;</span><span class="p">,</span> 
+                   <span class="s2">&quot;DeadtimeRelativeBias&quot;</span><span class="p">]</span>
     <span class="n">drop_list</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">varname</span> <span class="ow">in</span> <span class="n">ds</span><span class="o">.</span><span class="n">variables</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
         <span class="k">if</span> <span class="n">varname</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">index_label</span><span class="p">:</span>
