--- a/_modules/pysp2/vis/plot_wave.html
+++ b/_modules/pysp2/vis/plot_wave.html
@@ -454,7 +454,7 @@ document.write(`
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
 <span class="sd">    display: ACT HistogramDisplay object</span>
-<span class="sd">        Returns the ACT</span>
+<span class="sd">        Returns the ACT display object</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">chns</span> <span class="o">=</span> <span class="p">[</span><span class="n">i</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">8</span><span class="p">)]</span>
@@ -479,6 +479,7 @@ document.write(`
             <span class="n">display</span> <span class="o">=</span> <span class="n">plot_wave</span><span class="p">(</span><span class="n">ds</span><span class="p">,</span> <span class="n">record_no</span><span class="p">,</span> <span class="n">chns</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="n">plot_fit</span><span class="o">=</span><span class="n">plot_fit</span><span class="p">,</span>
                                 <span class="n">append_to_display</span><span class="o">=</span><span class="n">display</span><span class="p">,</span>
                                 <span class="n">subplot_index</span><span class="o">=</span><span class="p">(</span><span class="n">panel</span><span class="p">,))</span>
+        
     <span class="n">titles</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Scattering chanels&#39;</span><span class="p">,</span>
               <span class="s1">&#39; Incandesence channels&#39;</span><span class="p">,</span>
               <span class="s1">&#39;Split detector channels&#39;</span><span class="p">]</span>
@@ -491,6 +492,10 @@ document.write(`
         <span class="n">ax</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="n">xlabels</span><span class="p">[</span><span class="n">i</span><span class="p">])</span>
         <span class="n">ax</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="n">ylabels</span><span class="p">[</span><span class="n">i</span><span class="p">])</span>
         <span class="n">ax</span><span class="o">.</span><span class="n">legend</span><span class="p">(</span><span class="n">legends</span><span class="p">[</span><span class="n">i</span><span class="p">])</span>
+        <span class="k">if</span> <span class="n">i</span><span class="o">==</span><span class="mi">2</span><span class="p">:</span>
+            <span class="n">lines</span><span class="o">=</span><span class="n">ax</span><span class="o">.</span><span class="n">get_lines</span><span class="p">()</span>
+            <span class="n">ax</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">ds</span><span class="p">[</span><span class="s1">&#39;PkSplitPos_ch3&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">isel</span><span class="p">(</span><span class="n">event_index</span><span class="o">=</span><span class="n">record_no</span><span class="p">),</span><span class="mi">0</span><span class="p">,</span><span class="s1">&#39;*&#39;</span><span class="p">,</span><span class="n">markersize</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span><span class="n">color</span><span class="o">=</span><span class="n">lines</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">get_color</span><span class="p">())</span>
+            <span class="n">ax</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">ds</span><span class="p">[</span><span class="s1">&#39;PkSplitPos_ch7&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">isel</span><span class="p">(</span><span class="n">event_index</span><span class="o">=</span><span class="n">record_no</span><span class="p">),</span><span class="mi">0</span><span class="p">,</span><span class="s1">&#39;*&#39;</span><span class="p">,</span><span class="n">markersize</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span><span class="n">color</span><span class="o">=</span><span class="n">lines</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">get_color</span><span class="p">())</span>
     <span class="k">return</span> <span class="n">display</span>
 </pre></div>
 
