--- a/_modules/pysp2/util/peak_fit.html
+++ b/_modules/pysp2/util/peak_fit.html
@@ -338,7 +338,7 @@
 <span></span><span class="kn">import</span><span class="w"> </span><span class="nn">numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">np</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">time</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">dask.bag</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">db</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">multiprocessing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Pool</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">multiprocessing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Pool</span><span class="p">,</span><span class="n">get_context</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">itertools</span><span class="w"> </span><span class="kn">import</span> <span class="n">repeat</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">scipy.optimize</span><span class="w"> </span><span class="kn">import</span> <span class="n">curve_fit</span>
@@ -515,17 +515,16 @@
         <span class="n">proc_records</span> <span class="o">=</span> <span class="n">the_bag</span><span class="o">.</span><span class="n">map</span><span class="p">(</span><span class="n">fit_record</span><span class="p">)</span><span class="o">.</span><span class="n">compute</span><span class="p">()</span>
     <span class="c1">#use multiprocessing.Pool to do the curve fits in parallel</span>
     <span class="k">elif</span> <span class="n">parallel</span> <span class="o">==</span> <span class="s1">&#39;multiprocessing&#39;</span><span class="p">:</span>
-        <span class="k">with</span> <span class="n">Pool</span><span class="p">()</span> <span class="k">as</span> <span class="n">pool</span><span class="p">:</span>
+        <span class="k">with</span> <span class="n">get_context</span><span class="p">(</span><span class="s2">&quot;fork&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">Pool</span><span class="p">()</span> <span class="k">as</span> <span class="n">pool</span><span class="p">:</span>
             <span class="n">proc_records</span> <span class="o">=</span> <span class="n">pool</span><span class="o">.</span><span class="n">starmap</span><span class="p">(</span><span class="n">_do_fit_records</span><span class="p">,</span> 
                                         <span class="nb">zip</span><span class="p">(</span><span class="n">repeat</span><span class="p">(</span><span class="n">my_ds</span><span class="p">),</span> <span class="nb">range</span><span class="p">(</span><span class="n">num_records</span><span class="p">),</span> 
-                                        <span class="n">repeat</span><span class="p">(</span><span class="n">num_trig_pts</span><span class="p">)))</span>
+                                        <span class="n">repeat</span><span class="p">(</span><span class="n">num_trig_pts</span><span class="p">)),</span> <span class="n">chunksize</span><span class="o">=</span><span class="mi">2000</span><span class="p">)</span>
     <span class="c1">#else, no parallelism</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">proc_records</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">num_records</span><span class="p">):</span>
             <span class="n">proc_records</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">_do_fit_records</span><span class="p">(</span><span class="n">my_ds</span><span class="p">,</span> <span class="n">i</span><span class="p">,</span> <span class="n">num_trig_pts</span><span class="p">))</span>
         
-
     <span class="n">FtAmp</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">stack</span><span class="p">([</span><span class="n">x</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="n">proc_records</span><span class="p">])</span>
     <span class="n">FtPos</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">stack</span><span class="p">([</span><span class="n">x</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="n">proc_records</span><span class="p">])</span>
     <span class="n">Base</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">stack</span><span class="p">([</span><span class="n">x</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="n">proc_records</span><span class="p">])</span>
@@ -944,6 +943,7 @@
                   <span class="s1">&#39;height&#39;</span><span class="p">:</span> <span class="n">height</span><span class="p">,</span> <span class="s1">&#39;error&#39;</span><span class="p">:</span> <span class="n">error</span><span class="p">}</span>
 
     <span class="k">return</span> <span class="n">fit_coeffs</span>
+
 </pre></div>
 
                 </article>
